# redorm

./: .pre-commit-config.yaml  README.md  getversion.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dorelease.yml  pythonrelease.yml
docs/: index.md
docs/internals/: basics.md  relationships.md
lua/: get_key_indirect.lua  get_set_indirect.lua  unique_save.lua
redorm/: __init__.py  _version.py  client.py  exceptions.py  model.py  relationships.py  settings.py  types.py
tests/: __init__.py  conftest.py  relationship_tests.py  relationships_tests.txt  test_model.py
